--- a/internal/infra/cfpx/config.yaml
+++ b/internal/infra/cfpx/config.yaml
@@ -1,9 +1,9 @@
 _default_:
-  name: "_default_"
+  code: "_default_"
   desc: "默认"
   item:
     name:
-      name: "name"
+      code: "name"
       desc: "名称"
       process:
         - kind: fmtfn
@@ -13,28 +13,28 @@ _default_:
           op: "range"
           val: "2,20"
     age:
-      name: "age"
+      code: "age"
       desc: "用户年龄"
       process:
         - kind: check
           op: "lt"
           val: "200"
 user:
-  name: "user"
+  code: "user"
   desc: "用户"
   item:
     name:
-      name: "name"
+      code: "name"
       desc: "用户名称"
       process:
         - kind: fmtfn
-          op: "trimr"
+          op: "trim"
           val: ""
         - kind: check
           op: "range"
           val: "2,20"
     desc:
-      name: "desc"
+      code: "desc"
       desc: "用户描述"
       process:
         - kind: fmtfn
@@ -43,10 +43,3 @@ user:
         - kind: check
           op: "lt"
           val: "200"
-    age:
-      name: "age"
-      desc: "用户年龄"
-      process:
-        - kind: check
-          op: "lt"
-          val: "100"
